spices/ecs/tests/errors/xworld-undeclared-write.tur
;; X2 negative regression: a `defxsystem` body may only write through
;; the write-caps its `:writes-to` clauses bind. Here the body writes
;; `RenderPos` into `ren`, but `ren`'s `:writes-to` clause is empty, so
;; no `ren-RenderPos-write-cap` binding exists -- the body fails to
;; elaborate with an unbound-symbol error (TUR-E0003). This is the
;; cross-world analogue of the single-world `defsystem-undeclared-write`
;; regression: the cap discipline makes an undeclared write a
;; compile-time error.

(defmodule xworld_undeclared_write_test
  (export)

(import ecs/sized-storage :refer [SizedDense])
(import ecs/sized-world   :refer [sized-defworld-mono])
(import ecs/xworld        :refer [sized-defcomponent-accessors-xmono])
(import ecs/xcap          :refer [XWriteCap XReadCap
                                  make-write-cap make-read-cap use-cap!])
(import ecs/xsystem       :refer [XSystem make-xsystem defxsystem])

(defopaque Pos       :int)
(defopaque RenderPos :int)

(sized-defworld-mono SimWorld    (Static 8) [Pos])
(sized-defcomponent-accessors-xmono SimWorld Pos)
(sized-defworld-mono RenderWorld (Static 8) [RenderPos])
(sized-defcomponent-accessors-xmono RenderWorld RenderPos)

(def Pos-cid       0)
(def RenderPos-cid 0)

(defn load-SimWorld [wp : int] : SimWorld ```c
  return *(SimWorld *)(intptr_t)wp; ```)
(defn load-RenderWorld [wp : int] : RenderWorld ```c
  return *(RenderWorld *)(intptr_t)wp; ```)

;; ren declares NO writes, yet the body writes RenderPos into ren.
(defxsystem rogue-extract
  [sim SimWorld  ren RenderWorld]
  :reads-from  sim [Pos]
  :writes-to   sim []
  :reads-from  ren []
  :writes-to   ren []
  ;; ERROR: ren-RenderPos-write-cap is not in scope (ren writes nothing).
  (set-RenderPos! ren-RenderPos-write-cap ren 0 (:: 1 :RenderPos)))

) ;; end defmodule xworld_undeclared_write_test
